[project]
name = "crypto-ledger"
version = "0.1.0"
description = "Crypto portfolio & tax tracker for Spain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.3",
    "ruff-lsp>=0.0.62",
]
